--- a/index.html
+++ b/index.html
@@ -17,22 +17,28 @@
         <section class="portfolio-title">
             <h2>Моё портфолио</h2>
         </section>
+<div class="card">
+    <h3>Мой первый проект</h3>
+    <p>Описание первого видео.</p>
+    <div class="video-container">
+        <video controls style="width: 100%; border-radius: 10px;">
+            <source src="my first video.mp4" type="my first video/mp4">
+            Ваш браузер не поддерживает встроенные видео.
+        </video>
+    </div>
+</div>
 
-        <div class="card">
-            <h3>Первый проект</h3>
-            <p>Посмотри мой первый проект!</p>
-            <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
-            </div>
-        </div>
-
-        <div class="card">
-            <h3>Проект 2</h3>
-            <p>А это мой второй проект.</p>
-            <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
-            </div>
-        </div>
+<div class="card">
+    <h3>Мой второй проект</h3>
+    <p>Описание второго видео.</p>
+    <div class="video-container">
+        <video controls style="width: 100%; border-radius: 10px;">
+            <source src="video2.mp4" type="video/mp4">
+            Ваш браузер не поддерживает встроенные видео.
+        </video>
+    </div>
+</div>
+       
     </main>
 
 </body>
