--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>Описание первого видео.</p>
     <div class="video-container">
         <video controls style="width: 100%; border-radius: 10px;">
-            <source src="index.html.mp4" type="video/mp4">
+            <source src="videos/video.1.mp4" type="video/mp4">
             Ваш браузер не поддерживает встроенные видео.
         </video>
     </div>
