--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
     <header>
-        <h1>Тешебаев Алихан</h1>
-        <p>Ученик 27 школы</p>
+        <h1>Айтбеков Актан</h1>
+        <p>Ученик 26 школы</p>
     </header>
 
     <main>
@@ -36,4 +36,5 @@
     </main>
 
 </body>
+
 </html>
