--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h3>Первый проект</h3>
             <p>Посмотри мой первый видеоролик!</p>
             <div class="video-container">
-                <iframe src="videos/video.1.mp4" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://youtu.be/uSfRxGpTB5M.1.mp4" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
 
@@ -38,3 +38,4 @@
 </body>
 
 </html>
+
