--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h3>Первый проект</h3>
             <p>Посмотри мой первый видеоролик!</p>
             <div class="video-container">
-                <iframe src="https://youtu.be/uSfRxGpTB5M.1" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://studio.youtube.com/video/uSfRxGpTB5M/edit" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
 
@@ -38,5 +38,6 @@
 </body>
 
 </html>
+
 
 
