--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 
         <div class="card">
             <h3>Первый проект</h3>
-            <p>Посмотри мой первый видеоролик!</p>
+            <p>Проект на python.1</p>
             <div class="video-container">
-                <iframe src="https://youtube/uSfRxGpTB5M" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://youtu.be/I7U4Ma6SICc?si=LfKL8kwvNzO6GfJd" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
 
         <div class="card">
             <h3>Проект 2</h3>
-            <p>А это мой второй проект.</p>
+            <p>Проект на python/2.</p>
             <div class="video-container">
                 <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
             </div>
@@ -38,6 +38,7 @@
 </body>
 
 </html>
+
 
 
 
