--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h3>Первый проект</h3>
             <p>Проект на python.1</p>
             <div class="video-container">
-                <iframe src="https://youtu.be/U0BJkRgaPoY" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://youtu.be/BT4WzyT2g8k?si=uuCVUdOi_jF4Z-Wy" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
 
@@ -30,7 +30,7 @@
             <h3>Проект 2</h3>
             <p>Проект на python/2.</p>
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+                <iframe src="https://youtu.be/KDfZ_jSNLqA?si=i523VD76HRkpcFkp" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </main>
@@ -38,6 +38,7 @@
 </body>
 
 </html>
+
 
 
 
