--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h3>Первый проект</h3>
             <p>Проект на python.1</p>
             <div class="video-container">
-                <iframe src="video.1.MP4" frameborder="0" allowfullscreen></iframe>
+                <iframe src="video.1.mp4" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
 
@@ -38,6 +38,7 @@
 </body>
 
 </html>
+
 
 
 
