--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h3>Первый проект</h3>
             <p>Проект на python.1</p>
             <div class="video-container">
-                <iframe src="video.2.mp4" frameborder="0" allowfullscreen></iframe>
+                <iframe src="video.2.MP4" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
 
@@ -39,6 +39,7 @@
 </body>
 
 </html>
+
 
 
 
