--- a/index.html
+++ b/index.html
@@ -38,19 +38,13 @@ video {
 <div class="card">
     <h3>Проект 1</h3>
     <video controls>
-        <source src="project.1.mp4" type="video/mp4">
-    </video>
-</div>
-
-<div class="card">
-    <h3>Проект 2</h3>
-    <video controls>
-        <source src="project2.mp4" type="video/mp4">
+        <source src="videos/project.1.mp4" type="video/mp4">
     </video>
 </div>
 
 </body>
 </html>
+
 
 
 
